- Picking up the Space Jump will give the Morph Ball the ability to jump while morphed. This does not work for metroid_spacejump 1.
- The Ice Combo now checks for ten missiles instead of five.
- The Doom Cannon now has its Charge Combo.
- The Ice Beam's blast radius in co-op is expanded, allowing the player to catch more enemies with one shot. The Ice Beam's blast radius in PvP is ever-so-slightly expanded.
- All Charged beams aside from Ice have had their damage dramatically increased in co-op, to make charging up more viable.
- metroid_loaded has changed from activated-whenever to activated-on-first-spawn, and has been expanded on--1 gives you all weapons, 2 gives you more missiles, 3 gives you even more missiles, 4 gives you all weapons and more missiles, 5 gives you weapons/missiles/super missiles/power bombs, 6 gives you weapons/missiles/super missiles/power bombs/charge combo/speed booster.
- The Bomb ammo regeneration has been changed to be work via ACS rather than Decorate, which means that Spread should no longer give infinite bombs and Time Freeze should no longer stop bombs.
- Skulltag weapons now have their replacers, handled by metroid_skulltagweapons. 1 to spawn unique weapons, 2 to spawn normal weapons, 0 to not spawn anything at all.
- New weapon designed by ijon tichy has been implemented; the Chroma Storm, a rainbow herald of pure dakka!
- MaxArmorBonus and MaxHealthBonus now no longer appear.
- Being chilled now reduces your jump height as well.
- Floatbob removed from items.
- Charging up for Boost Ball now gives you a 2x weakness to everything, due to diverting energy to motion rather than shields.
- GLDefs have been included.
- The Long Charge Combo explosion now has double the radius.
- Slightly fewer smoke puffs on the Doom Cannon.