@@ -33,11 +33,21 @@ actor MorphBallPlayer : PlayerPawn
         loop
 
     See:
+        TNT1 A 0 A_TakeInventory("BoostBallWeakness",1)
         MARU BBCDDEFFA 1 A_TakeInventory("BallBoosting",1)
         Loop
 
+    Pain:
+        TNT1 A 0
+        TNT1 A 0 A_GiveToTarget("MetroidHitIndicator",1)
+        TNT1 A 0 A_Stop
+        MARU A 2 A_Recoil(2)
+        MARU A 2 A_Recoil(2)
+        goto See
+
     Pain.IceCombo:
         TNT1 A 0
+        TNT1 A 0 A_GiveToTarget("MetroidHitIndicator",1)
         TNT1 A 0 A_PlaySoundEx("ibeam/chill","soundslot7")
         TNT1 A 0 A_SetBlend("89D5FF",0.5,175)
         TNT1 A 0 ACS_ExecuteAlways(594,0,1,0,0)
@@ -45,6 +55,7 @@ actor MorphBallPlayer : PlayerPawn
 
     Death:
         TNT1 A 0
+        TNT1 A 0 A_GiveToTarget("MetroidHitIndicator",1)
         MARU A 1 A_PlayerScream
         TNT1 A 0 A_SpawnItemEx("EnemyDropSpawner",0,0,10,0,0,0,0,32)
         TNT1 A 0 A_SpawnItemEx("BombExplode",0,0,0,0,0,0,0,160)
