@@ -153,7 +153,11 @@ actor SamusPlayer : PlayerPawn
         Goto Missile
 
     Pain:
-        SAMS D 4 A_Recoil(2)
+        TNT1 A 0
+        TNT1 A 0 A_GiveToTarget("MetroidHitIndicator",1)
+        TNT1 A 0 A_Stop
+        SAMS D 2 A_Recoil(2)
+        SAMS D 2 A_Recoil(2)
         SAMS C 4 A_Pain
         SAMS D 4
         Goto Spawn
@@ -163,6 +167,7 @@ actor SamusPlayer : PlayerPawn
     Pain.IceChargedExplode:
     Pain.IceCombo:
         TNT1 A 0
+        TNT1 A 0 A_GiveToTarget("MetroidHitIndicator",1)
         TNT1 A 0 A_PlaySoundEx("ibeam/chill","soundslot7")
         TNT1 A 0 A_SetBlend("89D5FF",0.5,175)
         TNT1 A 0 ACS_ExecuteAlways(594,0,1,0,0)
@@ -170,6 +175,7 @@ actor SamusPlayer : PlayerPawn
 
     Pain.IceCharged:
         TNT1 A 0
+        TNT1 A 0 A_GiveToTarget("MetroidHitIndicator",1)
         TNT1 A 0 A_PlaySoundEx("ibeam/chill2","soundslot7")
         TNT1 A 0 A_SetBlend("White",0.5,35)
         TNT1 A 0 A_SetBlend("89D5FF",0.5,210)
@@ -178,6 +184,7 @@ actor SamusPlayer : PlayerPawn
 
     Death:
         TNT1 A 0
+        TNT1 A 0 A_GiveToTarget("MetroidHitIndicator",1)
         TNT1 A 0 A_SpawnItemEx("EnemyDropSpawner",0,0,10,0,0,0,0,32)
         SAMS DCDC 4
         SAMS I 2 A_PlayerScream
@@ -338,5 +345,22 @@ actor GrossSoundHack4 : CustomInventory // For Skulltag/unique pickups.
         TNT1 A 0
         TNT1 A 0 A_PlaySound("system/samusitemskl",CHAN_ITEM | CHAN_UI,1.0,0,ATTN_NONE)
         stop
+    }
+}
+
+actor MetroidHitIndicator : CustomInventory
+{
+    Inventory.MaxAmount 0
+    +AUTOACTIVATE
+    States
+    {
+       Spawn:
+         TNT1 A 1
+         stop
+         
+       Pickup:
+         TNT1 A 1
+         TNT1 A 1 ACS_ExecuteAlways(596,0,5,0,0)
+         stop
     }
 }
